--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,10 @@
+ main.yml
+ name: Test Action
+
+ on:
+   push:
+     branches:
+       - main  # or any branch you want to trigger the action
 jobs:
   test:
     steps:
